Python/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> KOTOBA ID ENDSTMT declare startaux BEGIN block END
Rule 2     start -> KOTOBA ID ENDSTMT startaux BEGIN block END
Rule 3     startaux -> function startaux
Rule 4     startaux -> empty
Rule 5     block -> OPENCURL blockaux CLOSECURL
Rule 6     blockaux -> action blockaux
Rule 7     blockaux -> empty
Rule 8     action -> input
Rule 9     action -> output
Rule 10    action -> statement
Rule 11    input -> READ OPENPAREN ID CLOSEPAREN ENDSTMT
Rule 12    output -> WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
Rule 13    outputaux -> expression
Rule 14    outputaux -> expression COMA outputaux
Rule 15    declare -> DEC decaux
Rule 16    decaux -> type ID declareaux
Rule 17    decaux -> type ID OPENBRAC cte CLOSEBRAC declareaux
Rule 18    declareaux -> ENDSTMT
Rule 19    declareaux -> COMA decaux
Rule 20    assign -> ID EQUAL assignaux
Rule 21    assign -> ID OPENBRAC cte CLOSEBRAC EQUAL assignaux
Rule 22    assignaux -> exp ENDSTMT
Rule 23    assignaux -> OPENCURL assiaux CLOSECURL ENDSTMT
Rule 24    assiaux -> exp
Rule 25    assiaux -> exp COMA assiaux
Rule 26    cte -> ID
Rule 27    cte -> BOOLCTE
Rule 28    cte -> NUMBERCTE
Rule 29    cte -> WORDCTE
Rule 30    cte -> SENTENCECTE
Rule 31    type -> BOOL
Rule 32    type -> NUMBER
Rule 33    type -> WORD
Rule 34    type -> SENTENCE
Rule 35    statement -> assign
Rule 36    statement -> expression
Rule 37    statement -> condition
Rule 38    statement -> cycle
Rule 39    statement -> specialfunction
Rule 40    expression -> relopexpression
Rule 41    expression -> relopexpression AND expression
Rule 42    expression -> relopexpression OR expression
Rule 43    relopexpression -> exp
Rule 44    relopexpression -> exp RELOP exp
Rule 45    relopexpression -> NOT exp
Rule 46    exp -> term
Rule 47    exp -> term PLUS exp
Rule 48    exp -> term MINUS exp
Rule 49    term -> factor
Rule 50    term -> factor MULT term
Rule 51    term -> factor DIV term
Rule 52    factor -> OPENPAREN expression CLOSEPAREN
Rule 53    factor -> cte
Rule 54    condition -> IF OPENPAREN expression CLOSEPAREN block
Rule 55    condition -> IF OPENPAREN expression CLOSEPAREN block ELSE block
Rule 56    cycle -> WHILE OPENPAREN expression CLOSEPAREN block
Rule 57    cycle -> DO block WHILE OPENPAREN expression CLOSEPAREN ENDSTMT
Rule 58    function -> FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
Rule 59    function -> FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
Rule 60    funcaux -> type
Rule 61    funcaux -> VOID
Rule 62    parameteraux -> type ID
Rule 63    parameteraux -> type ID COMA parameteraux
Rule 64    parameteraux -> empty
Rule 65    returnaux -> RETURN ID
Rule 66    returnaux -> empty
Rule 67    specialfunction -> ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
Rule 68    spaux -> cte
Rule 69    spaux -> empty
Rule 70    special -> LENGTH
Rule 71    special -> FREQUENCY
Rule 72    special -> SEARCH
Rule 73    special -> EXISTS
Rule 74    special -> MEAN
Rule 75    special -> MEDIAN
Rule 76    special -> MODE
Rule 77    special -> WORDCOUNT
Rule 78    special -> TOKENIZE
Rule 79    special -> REMOVE
Rule 80    empty -> <empty>

Terminals, with rules where they appear

AND                  : 41
BEGIN                : 1 2
BOOL                 : 31
BOOLCTE              : 27
CLOSEBRAC            : 17 21
CLOSECURL            : 5 23 58 59
CLOSEPAREN           : 11 12 52 54 55 56 57 58 59 67
COMA                 : 14 19 25 63
DEC                  : 15
DIV                  : 51
DO                   : 57
DOT                  : 67
ELSE                 : 55
END                  : 1 2
ENDSTMT              : 1 2 11 12 18 22 23 57 58 59 67
EQUAL                : 20 21
EXISTS               : 73
FREQUENCY            : 71
FUNC                 : 58 59
ID                   : 1 2 11 16 17 20 21 26 58 59 62 63 65 67
IF                   : 54 55
KOTOBA               : 1 2
LENGTH               : 70
MEAN                 : 74
MEDIAN               : 75
MINUS                : 48
MODE                 : 76
MULT                 : 50
NOT                  : 45
NUMBER               : 32
NUMBERCTE            : 28
OPENBRAC             : 17 21
OPENCURL             : 5 23 58 59
OPENPAREN            : 11 12 52 54 55 56 57 58 59 67
OR                   : 42
PLUS                 : 47
READ                 : 11
RELOP                : 44
REMOVE               : 79
RETURN               : 65
SEARCH               : 72
SENTENCE             : 34
SENTENCECTE          : 30
TOKENIZE             : 78
VOID                 : 61
WHILE                : 56 57
WORD                 : 33
WORDCOUNT            : 77
WORDCTE              : 29
WRITE                : 12
error                : 

Nonterminals, with rules where they appear

action               : 6
assiaux              : 23 25
assign               : 35
assignaux            : 20 21
block                : 1 2 54 55 55 56 57
blockaux             : 5 6 58 59
condition            : 37
cte                  : 17 21 53 68
cycle                : 38
decaux               : 15 19
declare              : 1 58
declareaux           : 16 17
empty                : 4 7 64 66 69
exp                  : 22 24 25 43 44 44 45 47 48
expression           : 13 14 36 41 42 52 54 55 56 57
factor               : 49 50 51
funcaux              : 58 59
function             : 3
input                : 8
output               : 9
outputaux            : 12 14
parameteraux         : 58 59 63
relopexpression      : 40 41 42
returnaux            : 58 59
spaux                : 67
special              : 67
specialfunction      : 39
start                : 0
startaux             : 1 2 3
statement            : 10
term                 : 46 47 48 50 51
type                 : 16 17 60 62 63

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . KOTOBA ID ENDSTMT declare startaux BEGIN block END
    (2) start -> . KOTOBA ID ENDSTMT startaux BEGIN block END

    KOTOBA          shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> KOTOBA . ID ENDSTMT declare startaux BEGIN block END
    (2) start -> KOTOBA . ID ENDSTMT startaux BEGIN block END

    ID              shift and go to state 3


state 3

    (1) start -> KOTOBA ID . ENDSTMT declare startaux BEGIN block END
    (2) start -> KOTOBA ID . ENDSTMT startaux BEGIN block END

    ENDSTMT         shift and go to state 4


state 4

    (1) start -> KOTOBA ID ENDSTMT . declare startaux BEGIN block END
    (2) start -> KOTOBA ID ENDSTMT . startaux BEGIN block END
    (15) declare -> . DEC decaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (58) function -> . FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> . FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (80) empty -> .

    DEC             shift and go to state 7
    FUNC            shift and go to state 10
    BEGIN           reduce using rule 80 (empty -> .)

    declare                        shift and go to state 5
    startaux                       shift and go to state 6
    function                       shift and go to state 8
    empty                          shift and go to state 9

state 5

    (1) start -> KOTOBA ID ENDSTMT declare . startaux BEGIN block END
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (58) function -> . FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> . FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (80) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 80 (empty -> .)

    startaux                       shift and go to state 11
    function                       shift and go to state 8
    empty                          shift and go to state 9

state 6

    (2) start -> KOTOBA ID ENDSTMT startaux . BEGIN block END

    BEGIN           shift and go to state 12


state 7

    (15) declare -> DEC . decaux
    (16) decaux -> . type ID declareaux
    (17) decaux -> . type ID OPENBRAC cte CLOSEBRAC declareaux
    (31) type -> . BOOL
    (32) type -> . NUMBER
    (33) type -> . WORD
    (34) type -> . SENTENCE

    BOOL            shift and go to state 15
    NUMBER          shift and go to state 16
    WORD            shift and go to state 17
    SENTENCE        shift and go to state 18

    decaux                         shift and go to state 13
    type                           shift and go to state 14

state 8

    (3) startaux -> function . startaux
    (3) startaux -> . function startaux
    (4) startaux -> . empty
    (58) function -> . FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> . FUNC funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (80) empty -> .

    FUNC            shift and go to state 10
    BEGIN           reduce using rule 80 (empty -> .)

    function                       shift and go to state 8
    startaux                       shift and go to state 19
    empty                          shift and go to state 9

state 9

    (4) startaux -> empty .

    BEGIN           reduce using rule 4 (startaux -> empty .)


state 10

    (58) function -> FUNC . funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> FUNC . funcaux ID OPENPAREN parameteraux CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL
    (60) funcaux -> . type
    (61) funcaux -> . VOID
    (31) type -> . BOOL
    (32) type -> . NUMBER
    (33) type -> . WORD
    (34) type -> . SENTENCE

    VOID            shift and go to state 22
    BOOL            shift and go to state 15
    NUMBER          shift and go to state 16
    WORD            shift and go to state 17
    SENTENCE        shift and go to state 18

    funcaux                        shift and go to state 20
    type                           shift and go to state 21

state 11

    (1) start -> KOTOBA ID ENDSTMT declare startaux . BEGIN block END

    BEGIN           shift and go to state 23


state 12

    (2) start -> KOTOBA ID ENDSTMT startaux BEGIN . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 25

    block                          shift and go to state 24

state 13

    (15) declare -> DEC decaux .

    FUNC            reduce using rule 15 (declare -> DEC decaux .)
    BEGIN           reduce using rule 15 (declare -> DEC decaux .)
    READ            reduce using rule 15 (declare -> DEC decaux .)
    WRITE           reduce using rule 15 (declare -> DEC decaux .)
    ID              reduce using rule 15 (declare -> DEC decaux .)
    IF              reduce using rule 15 (declare -> DEC decaux .)
    WHILE           reduce using rule 15 (declare -> DEC decaux .)
    DO              reduce using rule 15 (declare -> DEC decaux .)
    NOT             reduce using rule 15 (declare -> DEC decaux .)
    OPENPAREN       reduce using rule 15 (declare -> DEC decaux .)
    BOOLCTE         reduce using rule 15 (declare -> DEC decaux .)
    NUMBERCTE       reduce using rule 15 (declare -> DEC decaux .)
    WORDCTE         reduce using rule 15 (declare -> DEC decaux .)
    SENTENCECTE     reduce using rule 15 (declare -> DEC decaux .)
    RETURN          reduce using rule 15 (declare -> DEC decaux .)
    ENDSTMT         reduce using rule 15 (declare -> DEC decaux .)


state 14

    (16) decaux -> type . ID declareaux
    (17) decaux -> type . ID OPENBRAC cte CLOSEBRAC declareaux

    ID              shift and go to state 26


state 15

    (31) type -> BOOL .

    ID              reduce using rule 31 (type -> BOOL .)


state 16

    (32) type -> NUMBER .

    ID              reduce using rule 32 (type -> NUMBER .)


state 17

    (33) type -> WORD .

    ID              reduce using rule 33 (type -> WORD .)


state 18

    (34) type -> SENTENCE .

    ID              reduce using rule 34 (type -> SENTENCE .)


state 19

    (3) startaux -> function startaux .

    BEGIN           reduce using rule 3 (startaux -> function startaux .)


state 20

    (58) function -> FUNC funcaux . ID OPENPAREN parameteraux CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> FUNC funcaux . ID OPENPAREN parameteraux CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL

    ID              shift and go to state 27


state 21

    (60) funcaux -> type .

    ID              reduce using rule 60 (funcaux -> type .)


state 22

    (61) funcaux -> VOID .

    ID              reduce using rule 61 (funcaux -> VOID .)


state 23

    (1) start -> KOTOBA ID ENDSTMT declare startaux BEGIN . block END
    (5) block -> . OPENCURL blockaux CLOSECURL

    OPENCURL        shift and go to state 25

    block                          shift and go to state 28

state 24

    (2) start -> KOTOBA ID ENDSTMT startaux BEGIN block . END

    END             shift and go to state 29


state 25

    (5) block -> OPENCURL . blockaux CLOSECURL
    (6) blockaux -> . action blockaux
    (7) blockaux -> . empty
    (8) action -> . input
    (9) action -> . output
    (10) action -> . statement
    (80) empty -> .
    (11) input -> . READ OPENPAREN ID CLOSEPAREN ENDSTMT
    (12) output -> . WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
    (35) statement -> . assign
    (36) statement -> . expression
    (37) statement -> . condition
    (38) statement -> . cycle
    (39) statement -> . specialfunction
    (20) assign -> . ID EQUAL assignaux
    (21) assign -> . ID OPENBRAC cte CLOSEBRAC EQUAL assignaux
    (40) expression -> . relopexpression
    (41) expression -> . relopexpression AND expression
    (42) expression -> . relopexpression OR expression
    (54) condition -> . IF OPENPAREN expression CLOSEPAREN block
    (55) condition -> . IF OPENPAREN expression CLOSEPAREN block ELSE block
    (56) cycle -> . WHILE OPENPAREN expression CLOSEPAREN block
    (57) cycle -> . DO block WHILE OPENPAREN expression CLOSEPAREN ENDSTMT
    (67) specialfunction -> . ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
    (43) relopexpression -> . exp
    (44) relopexpression -> . exp RELOP exp
    (45) relopexpression -> . NOT exp
    (46) exp -> . term
    (47) exp -> . term PLUS exp
    (48) exp -> . term MINUS exp
    (49) term -> . factor
    (50) term -> . factor MULT term
    (51) term -> . factor DIV term
    (52) factor -> . OPENPAREN expression CLOSEPAREN
    (53) factor -> . cte
    (26) cte -> . ID
    (27) cte -> . BOOLCTE
    (28) cte -> . NUMBERCTE
    (29) cte -> . WORDCTE
    (30) cte -> . SENTENCECTE

    CLOSECURL       reduce using rule 80 (empty -> .)
    READ            shift and go to state 36
    WRITE           shift and go to state 39
    ID              shift and go to state 38
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    DO              shift and go to state 49
    NOT             shift and go to state 51
    OPENPAREN       shift and go to state 37
    BOOLCTE         shift and go to state 54
    NUMBERCTE       shift and go to state 55
    WORDCTE         shift and go to state 56
    SENTENCECTE     shift and go to state 57

    blockaux                       shift and go to state 30
    action                         shift and go to state 31
    empty                          shift and go to state 32
    input                          shift and go to state 33
    output                         shift and go to state 34
    statement                      shift and go to state 35
    assign                         shift and go to state 40
    expression                     shift and go to state 41
    condition                      shift and go to state 42
    cycle                          shift and go to state 43
    specialfunction                shift and go to state 44
    cte                            shift and go to state 45
    relopexpression                shift and go to state 46
    exp                            shift and go to state 50
    term                           shift and go to state 52
    factor                         shift and go to state 53

state 26

    (16) decaux -> type ID . declareaux
    (17) decaux -> type ID . OPENBRAC cte CLOSEBRAC declareaux
    (18) declareaux -> . ENDSTMT
    (19) declareaux -> . COMA decaux

    OPENBRAC        shift and go to state 59
    ENDSTMT         shift and go to state 60
    COMA            shift and go to state 61

    declareaux                     shift and go to state 58

state 27

    (58) function -> FUNC funcaux ID . OPENPAREN parameteraux CLOSEPAREN OPENCURL declare blockaux returnaux ENDSTMT CLOSECURL
    (59) function -> FUNC funcaux ID . OPENPAREN parameteraux CLOSEPAREN OPENCURL blockaux returnaux ENDSTMT CLOSECURL

    OPENPAREN       shift and go to state 62


state 28

    (1) start -> KOTOBA ID ENDSTMT declare startaux BEGIN block . END

    END             shift and go to state 63


state 29

    (2) start -> KOTOBA ID ENDSTMT startaux BEGIN block END .

    $end            reduce using rule 2 (start -> KOTOBA ID ENDSTMT startaux BEGIN block END .)


state 30

    (5) block -> OPENCURL blockaux . CLOSECURL

    CLOSECURL       shift and go to state 64


state 31

    (6) blockaux -> action . blockaux
    (6) blockaux -> . action blockaux
    (7) blockaux -> . empty
    (8) action -> . input
    (9) action -> . output
    (10) action -> . statement
    (80) empty -> .
    (11) input -> . READ OPENPAREN ID CLOSEPAREN ENDSTMT
    (12) output -> . WRITE OPENPAREN outputaux CLOSEPAREN ENDSTMT
    (35) statement -> . assign
    (36) statement -> . expression
    (37) statement -> . condition
    (38) statement -> . cycle
    (39) statement -> . specialfunction
    (20) assign -> . ID EQUAL assignaux
    (21) assign -> . ID OPENBRAC cte CLOSEBRAC EQUAL assignaux
    (40) expression -> . relopexpression
    (41) expression -> . relopexpression AND expression
    (42) expression -> . relopexpression OR expression
    (54) condition -> . IF OPENPAREN expression CLOSEPAREN block
    (55) condition -> . IF OPENPAREN expression CLOSEPAREN block ELSE block
    (56) cycle -> . WHILE OPENPAREN expression CLOSEPAREN block
    (57) cycle -> . DO block WHILE OPENPAREN expression CLOSEPAREN ENDSTMT
    (67) specialfunction -> . ID DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
    (43) relopexpression -> . exp
    (44) relopexpression -> . exp RELOP exp
    (45) relopexpression -> . NOT exp
    (46) exp -> . term
    (47) exp -> . term PLUS exp
    (48) exp -> . term MINUS exp
    (49) term -> . factor
    (50) term -> . factor MULT term
    (51) term -> . factor DIV term
    (52) factor -> . OPENPAREN expression CLOSEPAREN
    (53) factor -> . cte
    (26) cte -> . ID
    (27) cte -> . BOOLCTE
    (28) cte -> . NUMBERCTE
    (29) cte -> . WORDCTE
    (30) cte -> . SENTENCECTE

    CLOSECURL       reduce using rule 80 (empty -> .)
    RETURN          reduce using rule 80 (empty -> .)
    ENDSTMT         reduce using rule 80 (empty -> .)
    READ            shift and go to state 36
    WRITE           shift and go to state 39
    ID              shift and go to state 38
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    DO              shift and go to state 49
    NOT             shift and go to state 51
    OPENPAREN       shift and go to state 37
    BOOLCTE         shift and go to state 54
    NUMBERCTE       shift and go to state 55
    WORDCTE         shift and go to state 56
    SENTENCECTE     shift and go to state 57

    action                         shift and go to state 31
    blockaux                       shift and go to state 65
    empty                          shift and go to state 32
    input                          shift and go to state 33
    output                         shift and go to state 34
    statement                      shift and go to state 35
    assign                         shift and go to state 40
    expression                     shift and go to state 41
    condition                      shift and go to state 42
    cycle                          shift and go to state 43
    specialfunction                shift and go to state 44
    cte                            shift and go to state 45
    relopexpression                shift and go to state 46
    exp                            shift and go to state 50
    term                           shift and go to state 52
    factor                         shift and go to state 53

state 32

    (7) blockaux -> empty .

    CLOSECURL       reduce using rule 7 (blockaux -> empty .)
    RETURN          reduce using rule 7 (blockaux -> empty .)
    ENDSTMT         reduce using rule 7 (blockaux -> empty .)


state 33

    (8) action -> input .

    READ            reduce using rule 8 (action -> input .)
    WRITE           reduce using rule 8 (action -> input .)
    ID              reduce using rule 8 (action -> input .)
    IF              reduce using rule 8 (action -> input .)
    WHILE           reduce using rule 8 (action -> input .)
    DO              reduce using rule 8 (action -> input .)
    NOT             reduce using rule 8 (action -> input .)
    OPENPAREN       reduce using rule 8 (action -> input .)
    BOOLCTE         reduce using rule 8 (action -> input .)
    NUMBERCTE       reduce using rule 8 (action -> input .)
    WORDCTE         reduce using rule 8 (action -> input .)
    SENTENCECTE     reduce using rule 8 (action -> input .)
    CLOSECURL       reduce using rule 8 (action -> input .)
    RETURN          reduce using rule 8 (action -> input .)
    ENDSTMT         reduce using rule 8 (action -> input .)


state 34

    (9) action -> output .

    READ            reduce using rule 9 (action -> output .)
    WRITE           reduce using rule 9 (action -> output .)
    ID              reduce using rule 9 (action -> output .)
    IF              reduce using rule 9 (action -> output .)
    WHILE           reduce using rule 9 (action -> output .)
    DO              reduce using rule 9 (action -> output .)
    NOT             reduce using rule 9 (action -> output .)
    OPENPAREN       reduce using rule 9 (action -> output .)
    BOOLCTE         reduce using rule 9 (action -> output .)
    NUMBERCTE       reduce using rule 9 (action -> output .)
    WORDCTE         reduce using rule 9 (action -> output .)
    SENTENCECTE     reduce using rule 9 (action -> output .)
    CLOSECURL       reduce using rule 9 (action -> output .)
    RETURN          reduce using rule 9 (action -> output .)
    ENDSTMT         reduce using rule 9 (action -> output .)


state 35

    (10) action -> statement .

    READ            reduce using rule 10 (action -> statement .)
    WRITE           reduce using rule 10 (action -> statement .)
    ID              reduce using rule 10 (action -> statement .)
    IF              reduce using rule 10 (action -> statement .)
    WHILE           reduce using rule 10 (action -> statement .)
    DO              reduce using rule 10 (action -> statement .)
    NOT             reduce using rule 10 (action -> statement .)
    OPENPAREN       reduce using rule 10 (action -> statement .)
    BOOLCTE         reduce using rule 10 (action -> statement .)
    NUMBERCTE       reduce using rule 10 (action -> statement .)
    WORDCTE         reduce using rule 10 (action -> statement .)
    SENTENCECTE     reduce using rule 10 (action -> statement .)
    CLOSECURL       reduce using rule 10 (action -> statement .)
    RETURN          reduce using rule 10 (action -> statement .)
    ENDSTMT         reduce using rule 10 (action -> statement .)


state 36

    (11) input -> READ . OPENPAREN ID CLOSEPAREN ENDSTMT

    OPENPAREN       shift and go to state 66


state 37

    (52) factor -> OPENPAREN . expression CLOSEPAREN
    (40) expression -> . relopexpression
    (41) expression -> . relopexpression AND expression
    (42) expression -> . relopexpression OR expression
    (43) relopexpression -> . exp
    (44) relopexpression -> . exp RELOP exp
    (45) relopexpression -> . NOT exp
    (46) exp -> . term
    (47) exp -> . term PLUS exp
    (48) exp -> . term MINUS exp
    (49) term -> . factor
    (50) term -> . factor MULT term
    (51) term -> . factor DIV term
    (52) factor -> . OPENPAREN expression CLOSEPAREN
    (53) factor -> . cte
    (26) cte -> . ID
    (27) cte -> . BOOLCTE
    (28) cte -> . NUMBERCTE
    (29) cte -> . WORDCTE
    (30) cte -> . SENTENCECTE

    NOT             shift and go to state 51
    OPENPAREN       shift and go to state 37
    ID              shift and go to state 68
    BOOLCTE         shift and go to state 54
    NUMBERCTE       shift and go to state 55
    WORDCTE         shift and go to state 56
    SENTENCECTE     shift and go to state 57

    expression                     shift and go to state 67
    relopexpression                shift and go to state 46
    exp                            shift and go to state 50
    term                           shift and go to state 52
    factor                         shift and go to state 53
    cte                            shift and go to state 45

state 38

    (20) assign -> ID . EQUAL assignaux
    (21) assign -> ID . OPENBRAC cte CLOSEBRAC EQUAL assignaux
    (67) specialfunction -> ID . DOT special OPENPAREN spaux CLOSEPAREN ENDSTMT
    (26) cte -> ID .

    EQUAL           shift and go to state 69
    OPENBRAC        shift and go to state 70
    DOT             shift and go to state 71
    MULT            reduce using rule 26 (cte -> ID .)
    DIV             reduce using rule 26 (cte -> ID .)
    PLUS            reduce using rule 26 (cte -> ID .)
    MINUS           reduce using rule 26 (cte -> ID .)
    RELOP           reduce using rule 26 (cte -> ID .)
    AND             reduce using rule 26 (cte -> ID .)
    OR              reduce using rule 26 (cte -> ID .)
    READ            reduce using rule 26 (cte -> ID .)
    WRITE           reduce using rule 26 (cte -> ID .)
    ID              reduce using rule 26 (cte -> ID .)
    IF              reduce using rule 26 (cte -> ID .)
    WHILE           reduce using rule 26 (cte -> ID .)
    DO              reduce using rule 26 (cte -> ID .)
    NOT             reduce using rule 26 (cte -> ID .)
    OPENPAREN       reduce using rule 26 (cte -> ID .)
    BOOLCTE         reduce using rule 26 (cte -> ID .)
    NUMBERCTE       reduce using rule 26 (cte -> ID .)
    WORDCTE         reduce using rule 26 (cte -> ID .)
    SENTENCECTE     reduce using rule 26 (cte -> ID .)
    CLOSECURL       reduce using rule 26 (cte -> ID .)
    RETURN          reduce using rule 26 (cte -> ID .)
    ENDSTMT         reduce using rule 26 (cte -> ID .)


state 39

    (12) output -> WRITE . OPENPAREN outputaux CLOSEPAREN ENDSTMT

    OPENPAREN       shift and go to state 72


state 40

    (35) statement -> assign .

    READ            reduce using rule 35 (statement -> assign .)
    WRITE           reduce using rule 35 (statement -> assign .)
    ID              reduce using rule 35 (statement -> assign .)
    IF              reduce using rule 35 (statement -> assign .)
    WHILE           reduce using rule 35 (statement -> assign .)
    DO              reduce using rule 35 (statement -> assign .)
    NOT             reduce using rule 35 (statement -> assign .)
    OPENPAREN       reduce using rule 35 (statement -> assign .)
    BOOLCTE         reduce using rule 35 (statement -> assign .)
    NUMBERCTE       reduce using rule 35 (statement -> assign .)
    WORDCTE         reduce using rule 35 (statement -> assign .)
    SENTENCECTE     reduce using rule 35 (statement -> assign .)
    CLOSECURL       reduce using rule 35 (statement -> assign .)
    RETURN          reduce using rule 35 (statement -> assign .)
    ENDSTMT         reduce using rule 35 (statement -> assign .)


state 41

    (36) statement -> expression .

    READ            reduce using rule 36 (statement -> expression .)
    WRITE           reduce using rule 36 (statement -> expression .)
    ID              reduce using rule 36 (statement -> expression .)
    IF              reduce using rule 36 (statement -> expression .)
    WHILE           reduce using rule 36 (statement -> expression .)
    DO              reduce using rule 36 (statement -> expression .)
    NOT             reduce using rule 36 (statement -> expression .)
    OPENPAREN       reduce using rule 36 (statement -> expression .)
    BOOLCTE         reduce using rule 36 (statement -> expression .)
    NUMBERCTE       reduce using rule 36 (statement -> expression .)
    WORDCTE         reduce using rule 36 (statement -> expression .)
    SENTENCECTE     reduce using rule 36 (statement -> expression .)
    CLOSECURL       reduce using rule 36 (statement -> expression .)
    RETURN          reduce using rule 36 (statement -> expression .)
    ENDSTMT         reduce using rule 36 (statement -> expression .)


state 42

    (37) statement -> condition .
